<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.amd.alloyfutsalapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_searchFieldFragment"
            app:destination="@id/searchFieldFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_saved"
        android:name="com.amd.alloyfutsalapp.ui.savedField.SavedFieldFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_saved_field" />

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.amd.alloyfutsalapp.ui.info.InfoFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_info" />
    <fragment
        android:id="@+id/searchFieldFragment"
        android:name="com.amd.alloyfutsalapp.ui.searchField.SearchFieldFragment"
        android:label="SearchFieldFragment" >
        <argument
            android:name="modelField"
            app:argType="com.amd.alloyfutsalapp.model.ModelField" />
    </fragment>
</navigation>