<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:behavior_overlapTop="@dimen/_35sdp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.fieldDetails.FieldDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/bg_top_rounded" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="@dimen/_14sdp"
            android:paddingEnd="@dimen/_14sdp">

            <TextView
                android:id="@+id/txtTitleField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe_ui_bold"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                tools:text="Title here" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/segoe_ui_bold"
                android:text="@string/alamat"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/txtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe_ui_bold"
                android:textColor="@color/gray_description"
                android:textSize="@dimen/_12ssp"
                tools:text="@string/alamat" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:fontFamily="@font/segoe_ui_bold"
                android:text="@string/jumlah_lapangan"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/txtAmountField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe_ui_bold"
                android:textColor="@color/gray_description"
                android:textSize="@dimen/_12ssp"
                tools:text="@string/alamat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:fontFamily="@font/segoe_ui_bold"
                android:text="@string/harga"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/txtPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe_ui_bold"
                android:textColor="@color/gray_description"
                android:textSize="@dimen/_12ssp"
                tools:text="@string/alamat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:fontFamily="@font/segoe_ui_bold"
                android:text="@string/jam_operasional"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/txtOperationalHour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe_ui_bold"
                android:textColor="@color/gray_description"
                android:textSize="@dimen/_12ssp"
                tools:text="@string/alamat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:fontFamily="@font/segoe_ui_bold"
                android:text="@string/fasilitas"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/txtFacility"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe_ui_bold"
                android:textColor="@color/gray_description"
                android:textSize="@dimen/_12ssp"
                tools:text="@string/alamat" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_14sdp"
            android:paddingTop="@dimen/_14sdp"
            android:paddingBottom="@dimen/_14sdp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabMaps"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_14sdp"
                android:layout_toStartOf="@id/btnBook"
                android:src="@drawable/ic_baseline_map_24"
                app:backgroundTint="@color/green_primary"
                app:tint="@color/white" />

            <Button
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:id="@+id/btnBook"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/bg_button_primary_round_left"
                android:fontFamily="@font/segoe_ui_bold"
                android:text="@string/book"
                android:textSize="@dimen/_14ssp" />

        </RelativeLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>